--- a/PRIN/index.html
+++ b/PRIN/index.html
@@ -8,9 +8,25 @@
 		<title>Good Ideia</title>
 
 		<link rel="stylesheet" href="style.css">
+
+		<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 	</head>
 
 	<body>
-
+		<div class="top">
+			<input type="checkbox" id="bt_menu">
+			<label for="bt_menu">&#9776;</label>
+			
+			<center>
+				<nav class="menu">
+					<ul>
+						<li> <a href="index.html" title="Início"><b>INICIO</b></a> </li>
+						<li><a href="" title="Projetos"><b>PROJETOS</b></a></li>
+						<li><a href="" title="Protótipos"><b>PROTOTIPOS</b></a></li>
+						<li><a href="" title="Sobre"><b>SOBRE</b></a></li>
+					</ul>
+				</nav>
+			</center>
+		</div>
 	</body>
 </html>
