--- a/PRIN/index.html
+++ b/PRIN/index.html
@@ -34,6 +34,9 @@
 				<input id="bt_register" type="submit" name="account" value="CADASTRAR">
 				<input id="bt_login" type="submit" name="account" value="LOGIN">
 			</div>
+
+			<input type="checkbox" id="bt_menu">
+			<label for="bt_menu">&#9776;</label>
 		</div>
 	</body>
 </html>
