--- a/PRIN/index.html
+++ b/PRIN/index.html
@@ -31,8 +31,13 @@
 			</nav>
 
 			<div class="buttons">
-				<input id="bt_register" type="submit" name="account" value="CADASTRAR">
-				<input id="bt_login" type="submit" name="account" value="LOGIN">
+				<form action="login.php">
+					<input id="bt_login" type="submit" name="account" value="LOGIN">
+				</form>
+
+				<form action="register.php">
+					<input id="bt_register" type="submit" name="account" value="CADASTRAR">
+				</form>
 			</div>
 
 			<input type="checkbox" id="bt_menu">
